<resources>
    <string name="app_name">Math Mania</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Basic Maths</string>
    <string name="slide_1_desc">Have fun and explore the basic mathematical operations with us..!!!</string>

    <string name="slide_2_title">Learn Objects</string>
    <string name="slide_2_desc">Learning the simple geometrical shapes and their formulae.</string>

    <string name="slide_3_title">Start Trigonometry</string>
    <string name="slide_3_desc">Let\'s dive in to the world of trigonometry.</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="app_name1">SmallIntendApp</string>
    <string name="shape1">PARALLELOGRAM</string>
    <string name="shape2">RECTANGLE</string>
    <string name="shape3">SQUARE</string>
    <string name="shape4">TRIANGLE</string>
    <string name="shape5">CIRCLE</string>
    <string name="S1content1">1.   Quadrilateral with two pairs of parallel sides.</string>
    <string name="S1content2">2.   Opposite sides are equal</string>
    <string name="S1content3">3.   Opposite angles are equal.</string>
    <string name="S1content4">AREA = BASE X HEIGHT</string>
    <string name="S2content1">1.   Parallelogram</string>
    <string name="S2content2">2.   All angles are equal to 90. </string>
    <string name="S2content3">AREA = LENGTH X BREADTH</string>
    <string name="S2content4">For eg. , in the above figure</string>
    <string name="S2content6">Therefore , Area = 4 x 2 = 8 units.</string>
    <string name="S2content5">Length = 4 units and Breadth = 2 units</string>

    <string name="S3content1">1.   Parallelogram.</string>
    <string name="S3content2">2.   All angles are equal to 90.</string>
    <string name="S3content3">3.   All sides are equal.</string>
    <string name="S3content4">AREA = SIDE x SIDE</string>
    <string name="S4content1">1.   Polygon.</string>
    <string name="S4content2">2.   Three edges.</string>
    <string name="S4content3">3.   Three vertices.</string>
    <string name="S4content4">4.   They can be of different types such as : Isoceles triangle , equilateral triangle , scalene triangle etc.</string>
    <string name="S4content5">AREA = 0.5 x BASE x HEIGHT</string>

    <string name="S5content1">1.   Simple closed shape.</string>
    <string name="S5content2">2.   Set of all points in a plane that are given at a distance from a particular point known as CENTRE.</string>
    <string name="S5content3">3.   Curve that divides the plane into two regions.</string>
    <string name="S5content4">AREA = π X radius X radius</string>
    <string name="start_trigo">Start Trigo</string>
    <string name="learn_objects">Learn Objects</string>
    <string name="basic_maths">Basic Maths</string>
    <string name="math_mania">Math Mania</string>
    <string name="todo">basicmath</string>
    <string name="learn">Learn</string>
    <string name="Learning">learn</string>
    <string name="fun_with_learning">Fun with learning</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="study">Study Maths</string>
    <string name="score_board">Score Board</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_number_for_table">Enter the Number range under 199</string>
    <string name="hints">Hints</string>
    <string name="flag_1">0 + 1 =1 "\n" 1+2 =3 "\n" 3 * 4 = 12 (Solved) </string>
    <string name="flag_2">3 *4 =12 "\n" 12 +4 =16 "\n" 16 / 4 = 4(Solved) </string>

    <string name="flag_3"> 0+3 =3 "\n" 3 * 3 =9 "\n " 9 + 3 = 12 (solved)</string>

    <string name="flag_4"> 0 +8 = 8 "\n" 8 * 10 * 1 = 800 "\n" 800 + 8 = 808 "\n" 808 / 2 = 404(Solved)</string>
    <string name="flag_5">10 * 3 = 30 "\n"  30 – 5 = 25 "\n" 25 *2 = 50(solved) </string>
    <string name="flag_6"> 171 – 9 =162 "\n" 162 * 2 =324 " 324 /10 = 32 "\n" 32 – 9 = 23(Solved) </string>
    <string name="flag_7">3 * 9 = 27 "\n" 27 /10 = 2(solved) </string>
    <string name="flag_8">99*11 = 1089 "\n"1089/10 = 108 "\n" 108-8 = 100 (Solved) </string>
    <string name="flag_9"> 2+2 = 4 "\n" 4*4 = 16 "\n" 16*4 = 64 (Solved)</string>
    <string name="flag_10"> 800 * 2 = 1600 "\n" 1600/4 = 400 "\n" 400/4 = 100 (Solved) </string>
    <string name="individual_level_performance">Individual level performance</string>
    <string name="game3">Basic Maths</string>
    <string name="how_to_play">How to Play</string>
    <string name="play_button">Select Game</string>
    <string name="high_score_button">Leader Board</string>
    <string name="settings_button">Settings</string>
    <string name="leaderboard">Leaderboard</string>

    <string name="bubble_leaderboard">Bubble Leaderboard</string>
    <string name="balloon_leaderboard">Balloon Leaderboard</string>
    <string name="owl_leaderboard">Owl Leaderboard</string>

    <string name="balloon_scores">Balloon</string>
    <string name="bubble_scores">Bubble</string>
    <string name="owl_scores">Owl</string>

    <string name="user_label">Username</string>
    <string name="score_label">Score</string>
    <string name="game1">Bubbles</string>
    <string name="game2">Balloons</string>
    <string name="game3_owl">Owl</string>

    <string name="pop_up_next">Next</string>
    <string name="pop_up_prev">Previous</string>

    <string name="high_score">High Score: </string>
    <string name="student_over_all_performence">Student Over All Performence :</string>

</resources>
