<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient4"
    android:weightSum="1"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:text="@string/app_name"
        android:layout_margin="@dimen/activity_horizontal_margin"
        style="@style/welcome_buttons"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:weightSum=".7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:weightSum="1"
                android:background="@drawable/seletor_botao6"
                android:onClick="easylevel">

                <View
                    android:layout_margin="15dp"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.2"
                    android:layout_gravity="center"
                    android:background="@drawable/basicmath_1"/>

                <TextView
                    android:layout_width="0dp"
                    android:textAlignment="center"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:text="@string/basic_maths"
                    style="@style/menu_buttons"/>

            </LinearLayout>
            <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                android:layout_weight="0.05"
                android:layout_marginTop="3dp"
                android:id="@+id/simpleProgressBar"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_centerHorizontal="true"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:rcMax="100"
                app:rcProgress="100"
                app:rcRadius="10dp"
                app:rcReverse="false"
                app:rcBackgroundPadding="3dp"
                app:rcProgressColor="#38c0ae"
                app:rcBackgroundColor="#757575"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:weightSum=".7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:weightSum="1"
                android:id="@+id/object"
                android:background="@drawable/seletor_botao"
                >

                <View
                    android:layout_margin="15dp"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/object_1"/>

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/learn_objects"
                    style="@style/menu_buttons"/>

            </LinearLayout>
            <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                android:layout_weight="0.05"
                android:layout_marginTop="3dp"
                android:id="@+id/simpleProgressBar2"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_centerHorizontal="true"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:rcMax="100"
                app:rcProgress="100"
                app:rcRadius="10dp"
                app:rcReverse="false"
                app:rcBackgroundPadding="3dp"
                app:rcProgressColor="#38c0ae"
                app:rcBackgroundColor="#757575"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:weightSum=".7">

            <LinearLayout
                android:id="@+id/trigo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:weightSum="1"
                android:background="@drawable/seletor_botao4"
                >

                <View
                    android:layout_margin="15dp"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/trigono"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:layout_gravity="center"
                    android:text="@string/start_trigo"
                    style="@style/menu_buttons"/>

            </LinearLayout>
            <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                android:layout_weight="0.05"
                android:layout_marginTop="3dp"
                android:id="@+id/simpleProgressBar3"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_centerHorizontal="true"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:rcMax="100"
                app:rcProgress="100"
                app:rcRadius="10dp"
                app:rcReverse="false"
                app:rcBackgroundPadding="3dp"
                app:rcProgressColor="#38c0ae"
                app:rcBackgroundColor="#757575"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:weightSum=".7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:weightSum="1"
                android:id="@+id/learnbook"
                android:background="@drawable/seletor_botao2"
                >

                <View
                    android:layout_margin="15dp"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/bookread"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:layout_gravity="center"
                    android:text="@string/learn"
                    style="@style/menu_buttons" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>